Screen Flickering Fixed

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,4 +12,10 @@ body {
   line-height: 1.58;
   letter-spacing: -0.003em;
   font-size: 15px;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
